--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Joel noir"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/cv_img.png"
   bio              : "Junior dev"
   location         : "FR"
   email            : "noir.joel@gmail.comm"
